fix text spacing

--- a/components/body/body.module.scss
+++ b/components/body/body.module.scss
@@ -5,4 +5,8 @@
   @media (max-width: 1600px) {
     padding: 12px;
   }
+
+  .sectionWrapper {
+    margin: 24px 0;
+  }
 }
