--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -27,7 +27,7 @@ p {
 	font-size: 2rem;
 	font-weight: 500;
 	margin-top: 0;
-	line-height: 40px;
+	line-height: 1.25;
 
 	&:last-child {
 		margin-bottom: 0;
